# sequence-sim

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/plans/: plan.md
data/: feature_stats.json
data/lgbm/: model.txt  model_reg.txt  model_v2.txt
data/nn/: model.pt  model_3L.pt  model_ext.pt  model_h256.pt  model_lowlr.pt  model_norm.pt
scripts/: analyze_mcts_disagreements.py  collect_feature_stats.py  explain_strategy.py  generate_dataset.py  launch_gui.py  optimize_from_mcts.py  optimize_weights.py  run_tournament.py  train_lgbm.py  train_neural.py  validate_normalization.py
sequence/agents/: README.md  __init__.py  base.py  defensive_agent.py  expert_agent.py  greedy_agent.py  lgbm_agent.py  lookahead_agent.py  mcts_agent.py  neural_agent.py  offensive_agent.py  random_agent.py  scorer_agent.py  smart_agent.py
sequence/analysis/: __init__.py  explainer.py  game_phases.py  heatmaps.py  statistics.py
sequence/core/: __init__.py  actions.py  board.py  card.py  card_tracker.py  deck.py  game.py  game_state.py  types.py
sequence/gui/: __init__.py  app.py  board_canvas.py  heatmap_view.py  replay_view.py
sequence/scoring/: README.md  __init__.py  features.py  lgbm_scoring.py  neural_scoring.py  normalization.py  optimizer.py  scoring_function.py
sequence/simulation/: __init__.py  dataset.py  runner.py  tournament.py
tests/: test_agents.py  test_analysis.py  test_board.py  test_card.py  test_card_tracker.py  test_deck.py  test_game.py  test_mcts.py  test_scoring.py  test_smart_agent.py
web/: server.py
web/frontend/: package-lock.json  (+2 more)
(+11 files in other folders)
