[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sequence-sim"
version = "0.1.0"
description = "Sequence board game simulator with MCTS, scoring optimization, and GUI"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.1",
]
sim = [
    "tqdm>=4.64",
]
analysis = [
    "pandas>=2.0",
    "scipy>=1.10",
    "cma>=3.3",
]
gui = [
    # tkinter is part of stdlib
]
nn = [
    "torch>=2.0",
]
lgbm = [
    "lightgbm>=4.0",
]
all = [
    "sequence-sim[dev,sim,analysis,gui,nn,lgbm]",
]

[tool.setuptools.packages.find]
include = ["sequence*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
